Add header and update form

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
-/venv/
-/env/
-.idea
+# database
+/db.sqlite
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# PyCharm
+.idea/
